--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'bbb-icons';
+  src: url('/fonts/BbbIcons/bbb-icons.woff?j1ntjp') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 [class^="icon-bbb-"], [class*=" icon-bbb-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'bbb-icons' !important;
@@ -51,8 +58,14 @@
 .icon-bbb-fit_to_screen:before {
   content: "\e929";
 }
+.icon-bbb-eraser_tool:before {
+  content: "\e967";
+}
 .icon-bbb-line_tool:before {
   content: "\e91c";
+}
+.icon-bbb-marker_tool:before {
+  content: "\e968";
 }
 .icon-bbb-circle_tool:before {
   content: "\e91d";
@@ -253,6 +266,9 @@
 }
 .icon-bbb-multi_whiteboard:before {
   content: "\e93d";
+}
+.icon-bbb-multi_whiteboard_isolated:before {
+  content: "\e968";
 }
 .icon-bbb-whiteboard:before {
   content: "\e93e";
